examples/test/testpolicy12126.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12126
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key21: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value21
          key31: value48
          key25: value49
      podSelector:
        matchLabels:
          key35: value44
          key41: value44
          key34: value31
